Extract common row/grid styling

--- a/src/home/pricing.ejs
+++ b/src/home/pricing.ejs
@@ -5,10 +5,10 @@ hideInNavigation: false
 ---
 <div class="row text-row">
   <div class="content-container">
-    <div class="column text-heading">
+    <div class="column with-borders text-heading">
     <h3>Fees</h3>
     </div>
-    <div class="column text-copy">
+    <div class="column with-borders text-copy">
     <p>
       * We take 5% for crowdfunding done on the site. Third-party payment
       processors (like Stripe and Paypal) charge separate fees on each transaction
