--- a/src/home/services.ejs
+++ b/src/home/services.ejs
@@ -5,13 +5,13 @@ hideInNavigation: false
 ---
 <div class="row checklist-row">
   <div class="content-container">
-    <div class="column">
+    <div class="column with-borders">
       <p>
         If your group wants to:
       </p>
     </div>
 
-    <ul class="checklist column">
+    <ul class="checklist column with-borders">
       <li>
         <div>View your entire budget in one secure place</div>
       </li>
@@ -32,10 +32,10 @@ hideInNavigation: false
 
 <div class="row text-row">
   <div class="content-container">
-    <div class="column text-heading">
+    <div class="column text-heading with-borders">
       <h3>And much more!</h3>
     </div>
-    <div class="column text-copy">
+    <div class="column text-copy with-borders">
       <p class="text-copy">
         Virtual cards – Free courses – Grants – Collective admins – Processing payments 2x a week – Community forums –
         Tech
