--- a/src/home/hero.ejs
+++ b/src/home/hero.ejs
@@ -7,7 +7,7 @@ hideInNavigation: true
 <div class="row hero-row">
   <div class="content-container">
     <% firstCollective = featuredCollectives.featuredCollectives[0] %>
-    <div class="left">
+    <div class="column left">
       <h1>
         OC Foundation is proud to be the financial and legal home of
         <span class="collective-name"><%= firstCollective.name %> </span> and 300
@@ -26,11 +26,13 @@ hideInNavigation: true
       >
     </div>
 
-  <img
-    class="collective-hero-image"
-    src="<%- firstCollective.heroImage %>"
-    alt="<%= firstCollective.heroImageAlt %>"
-  />
+    <div class="column right">
+      <img
+        class="collective-hero-image"
+        src="<%- firstCollective.heroImage %>"
+        alt="<%= firstCollective.heroImageAlt %>"
+      />
+    </div>
   </div>
 </div>
 
@@ -45,12 +47,17 @@ hideInNavigation: true
 
 <div class="row the-process-row">
   <div class="content-container">
-    <h2 class="the-process-heading">The Process</h2>
-    <img
-      class="the-process-graphic"
-      src="assets/images/theprocess.png"
-      alt="Infographic showing the steps: Apply, then meet us, then set up your page, then raise funds!"
-    />
+    <div class="column with-borders the-process-heading">
+      <h2>The Process</h2>
+    </div>
+
+    <div class="column the-process-graphic">
+      <img
+        class=""
+        src="assets/images/theprocess.png"
+        alt="Infographic showing the steps: Apply, then meet us, then set up your page, then raise funds!"
+      />
+    </div>
   </div>
 </div>
 
@@ -60,25 +67,29 @@ hideInNavigation: true
 
 <div class="row network-row">
   <div class="content-container">
-    <img class="network-graphic" src="assets/images/network.png"
-    alt="Infographic showing the steps: Apply, then meet us, then set up your page, then raise funds!" />
-    <p class="network-copy">
-      We are part of an international network of 600 nonprofits, LLCs, and co-ops around the world that use the same, open
-      source software to create efficiencies with money.
-    </p>
+    <div class="column network-graphic">
+      <img class="" src="assets/images/network.png"
+      alt="Infographic showing the steps: Apply, then meet us, then set up your page, then raise funds!" />
+    </div>
+    <div class="column network-copy">
+      <p class="">
+        We are part of an international network of 600 nonprofits, LLCs, and co-ops around the world that use the same, open
+        source software to create efficiencies with money.
+      </p>
+    </div>
   </div>
 </div>
 
 <div class="row video-row">
   <div class="content-container">
-    <div class="video-copy-container column">
+    <div class="video-copy-container column with-borders">
       <p class="video-copy">
         OC Foundation is a nonprofit with a tech platform that enables over 300 groups to raise and spend over $13 million
         dollars a year in full transparency.
       </p>
     </div>
 
-    <div class="video-wrapper">
+    <div class="column video-wrapper with-borders">
       <iframe class="video" src="https://www.youtube-nocookie.com/embed/269SyUQmL_U?modestbranding=1&rel=0&showinfo=0" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
