--- a/src/home/pricing.ejs
+++ b/src/home/pricing.ejs
@@ -3,7 +3,17 @@ title: Pricing
 position: 2
 hideInNavigation: false
 ---
-<div class="row text-row">
+
+<div class="pricing-graphic-row">
+  <div class="pricing-graphic content-container">
+    <div class="raised">$1000 raised</div>
+    <div class="net">$920 for the Collective</div>
+    <div class="fee">$80 OCF services</div>
+    <div class="fee-staff">$40 Staff</div><div class="fee-tech">$40 Tech</div>
+  </div>
+</div>
+
+<div class="row text-row fees-row">
   <div class="content-container">
     <div class="column with-borders text-heading">
     <h3>Fees</h3>
