--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -19,6 +19,7 @@
 // Sections
 @import './sections/hero.less';
 @import './sections/services.less';
+@import './sections/pricing.less';
 @import './sections/team.less';
 @import './sections/events.less';
 @import './sections/blog.less';
