Get in touch block

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -25,5 +25,6 @@
 @import './sections/blog.less';
 @import './sections/hosted-collectives.less';
 @import './sections/docs.less';
+@import './sections/get-in-touch.less';
 
 @import './nav.less';
