--- a/src/styles/variables/color.less
+++ b/src/styles/variables/color.less
@@ -1,6 +1,7 @@
 @font-color-base: #141415;
 @background-color-lighter: #ffffff;
 @background-color-base: #ebfdfe66;
+@color-dark-400: #c3c6cb;
 
 @color-dark-green: #044f54;
 @color-red: #ff3d22;
