--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -26,5 +26,6 @@
 @import './sections/hosted-collectives.less';
 @import './sections/docs.less';
 @import './sections/get-in-touch.less';
+@import './sections/giant-apply-link.less';
 
 @import './nav.less';
