--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -27,5 +27,6 @@
 @import './sections/docs.less';
 @import './sections/get-in-touch.less';
 @import './sections/giant-apply-link.less';
+@import './sections/footer.less';
 
 @import './nav.less';
