--- a/src/styles/sections/hosted-collectives.less
+++ b/src/styles/sections/hosted-collectives.less
@@ -47,7 +47,7 @@ section#hosted-collectives {
 
   @image-size: 72px;
 
-  .collective-list > li {
+  .collective-list .collective {
     display: grid;
     grid-template-columns: @image-size 1fr;
     column-gap: 16px;
