--- a/src/styles/sections/events.less
+++ b/src/styles/sections/events.less
@@ -1,5 +1,7 @@
 section#events {
-  border-bottom: @default-rule;
+  .outer-events-wrapper {
+    border-bottom: @default-rule;
+  }
 
   .content {
     padding-top: 0;
