Platform features carousel

--- a/src/home/services.ejs
+++ b/src/home/services.ejs
@@ -47,6 +47,8 @@ hideInNavigation: false
   </div>
 </div>
 
+<%- include('/platformFeaturesCarousel') %>
+
 <div class="heading-container">
   <h2>Is OC Foundation right for you?</h2>
 </div>
