--- a/src/_layouts/default.ejs
+++ b/src/_layouts/default.ejs
@@ -9,17 +9,15 @@
     <% } else { %>
     <title><%= locals.title %></title>
     <% } %>
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css" />
     <link rel="stylesheet" href="/styles.css" />
     <!-- <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script> -->
 
     <!-- Scripts -->
     <!-- <script src="/assets/scripts/popup.js"></script> -->
 
-    <!-- <link
-      rel="stylesheet"
-      href="https://unpkg.com/flickity@2/dist/flickity.min.css"
-    />
-    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script> -->
+
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <%- include('/fonts') %> <%- include('/analytics') %>
 
     <!-- https://www.netlifycms.org/docs/add-to-your-site/#add-the-netlify-identity-widget -->
