--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -15,6 +15,8 @@
 @import './partials/heading-container.less';
 @import './partials/row.less';
 @import './partials/services-table.less';
+@import './partials/carousel.less';
+@import './partials/platformFeaturesCarousel.less';
 
 // Sections
 @import './sections/hero.less';
