--- a/src/_layouts/default.ejs
+++ b/src/_layouts/default.ejs
@@ -18,7 +18,8 @@
 
 
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
-    <%- include('/fonts') %> <%- include('/analytics') %>
+    <%- include('/fonts') %> 
+    <%- include('/analytics') %>
 
     <!-- https://www.netlifycms.org/docs/add-to-your-site/#add-the-netlify-identity-widget -->
     <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
