fix message alt

--- a/src/home/hero.ejs
+++ b/src/home/hero.ejs
@@ -69,7 +69,7 @@ hideInNavigation: true
   <div class="content-container">
     <div class="column network-graphic">
       <img class="" src="assets/images/network.png"
-      alt="Infographic showing the steps: Apply, then meet us, then set up your page, then raise funds!" />
+      alt="Network graphic" />
     </div>
     <div class="column network-copy">
       <p class="">
