--- a/src/styles/sections/get-in-touch.less
+++ b/src/styles/sections/get-in-touch.less
@@ -117,5 +117,9 @@ section#get-in-touch {
     .twitter {
       .social-icon('twitter.svg');
     }
+
+    @media screen and (max-width: @viewport-width-tablet-landscape) {
+      grid-template-columns: repeat(2, 1fr);
+    }
   }
 }
