--- a/src/styles/sections/hosted-collectives.less
+++ b/src/styles/sections/hosted-collectives.less
@@ -14,12 +14,20 @@ section#hosted-collectives {
     > :first-child {
       grid-column: span 4;
       align-self: center;
+
+      @media screen and (max-width: @viewport-width-tablet-landscape) {
+        grid-column: span 3;
+      }
     }
 
     // right side
     > :nth-child(2) {
       grid-column: span 8;
       border-left: @default-rule;
+
+      @media screen and (max-width: @viewport-width-tablet-landscape) {
+        grid-column: span 5;
+      }
     }
   }
 
@@ -32,6 +40,10 @@ section#hosted-collectives {
     grid-template-columns: repeat(3, 1fr);
     column-gap: @layout-grid-gutter;
     row-gap: @layout-grid-margin;
+
+    @media screen and (max-width: @viewport-width-tablet-landscape) {
+      grid-template-columns: repeat(2, 1fr);
+    }
   }
 
   .collective-name {
@@ -64,6 +76,14 @@ section#hosted-collectives {
   // Hide events after first 9
   .collective-list > li:nth-child(9) ~ li {
     display: none;
+  }
+
+  // or first 6 or tablet
+  @media screen and (max-width: @viewport-width-tablet-landscape) {
+    // Hide events after first 6
+    .collective-list > li:nth-child(6) ~ li {
+      display: none;
+    }
   }
 
   .show-all .collective-list li {
