--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -6,12 +6,14 @@
 @import './variables/rules.less';
 @import './variables/sizing.less';
 @import './variables/typography.less';
+@import './variables/viewports.less';
 
 @import './base.less';
 
 @import './markdown-containers.less';
 
 // Partials
+@import './partials/layout.less';
 @import './partials/heading-container.less';
 @import './partials/row.less';
 @import './partials/services-table.less';
