--- a/src/styles/sections/blog.less
+++ b/src/styles/sections/blog.less
@@ -8,9 +8,10 @@ section#blog {
     .layout-grid();
     margin-bottom: @layout-grid-margin;
 
-    li {
-      grid-column: span (12 / 3);
+    // On tablet, the design does not follow the 8 column grid, but rather seems to be on its own 3 column grid
+    grid-template-columns: repeat(3, 1fr) !important;
 
+    li {
       a::before {
         content: '';
         display: inline-block;
