--- a/src/styles/nav.less
+++ b/src/styles/nav.less
@@ -50,6 +50,10 @@
   .links-container {
     flex-grow: 1;
     padding: 0 152px;
+
+    @media screen and (max-width: @viewport-width-tablet-landscape) {
+      padding: 1em;
+    }
   }
 
   .links-list {
