--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -19,6 +19,7 @@
 @import './partials/services-table.less';
 @import './partials/carousel.less';
 @import './partials/platformFeaturesCarousel.less';
+@import './partials/viewport-visibility.less';
 
 // Sections
 @import './sections/hero.less';
