Carousel tablet portrait

--- a/src/styles/partials/carousel.less
+++ b/src/styles/partials/carousel.less
@@ -43,6 +43,7 @@
       minmax(auto, 1fr) auto minmax(auto, 1fr);
     align-items: center;
     column-gap: @layout-grid-gutter-tablet;
+    row-gap: @layout-grid-margin;
 
     .flickity-viewport {
       grid-area: viewport;
