--- a/src/styles/partials/platformFeaturesCarousel.less
+++ b/src/styles/partials/platformFeaturesCarousel.less
@@ -7,12 +7,20 @@
     grid-template-columns: 2fr 1fr;
     column-gap: @layout-grid-gutter;
     align-items: center;
-    padding: @layout-grid-margin (@layout-grid-gutter * 2);
+    padding: 0 (@layout-grid-gutter * 2);
     padding-bottom: 0;
 
     @media screen and (max-width: @viewport-width-tablet-landscape) {
       column-gap: @layout-grid-gutter-tablet;
-      padding: @layout-grid-margin @layout-grid-gutter-tablet;
+      padding: 0;
+    }
+
+    @media screen and (max-width: @viewport-width-tablet-portrait) {
+      grid-template-columns: auto;
+
+      .feature-copy {
+        grid-row: 1;
+      }
     }
   }
 
