events tablet portrait

--- a/src/styles/sections/events.less
+++ b/src/styles/sections/events.less
@@ -32,6 +32,26 @@ section#events {
         grid-column: span 5;
       }
     }
+
+    @media screen and (max-width: @viewport-width-tablet-portrait) {
+      // no longer a grid at this size
+      display: block;
+
+      // make inner elements the content containers (have padding)
+      padding: 0;
+
+      > * {
+        padding: @layout-grid-margin @layout-grid-gutter-tablet;
+      }
+
+      > :first-child {
+        border-bottom: @default-rule;
+      }
+
+      > :nth-child(2) {
+        border-left: none;
+      }
+    }
   }
 
   .event-list {
@@ -46,6 +66,12 @@ section#events {
 
     @media screen and (max-width: @viewport-width-tablet-landscape) {
       grid-template-columns: repeat(2, 1fr);
+    }
+    @media screen and (max-width: @viewport-width-tablet-portrait) {
+      padding: 0;
+      padding-bottom: @layout-grid-margin;
+      // back to 3 columns!
+      grid-template-columns: repeat(3, 1fr);
     }
   }
 
@@ -74,8 +100,8 @@ section#events {
     display: none;
   }
 
-  // or first 6 or tablet
-  @media screen and (max-width: @viewport-width-tablet-landscape) {
+  // or first 6 or tablet-landscape
+  @media screen and (max-width: @viewport-width-tablet-landscape) and (min-width: (@viewport-width-tablet-portrait + 1px)) {
     // Hide events after first 6
     .event-list > li:nth-child(6) ~ li {
       display: none;
