--- a/src/styles/sections/hosted-collectives.less
+++ b/src/styles/sections/hosted-collectives.less
@@ -71,6 +71,7 @@ section#hosted-collectives {
 
     @media screen and (max-width: @viewport-width-tablet-portrait) {
       padding: 0;
+      padding-bottom: @layout-grid-margin;
       // back to 3 columns!
       grid-template-columns: repeat(3, 1fr);
     }
