--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -44,6 +44,15 @@ p {
   margin: 1em 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 16px 0;
+}
+
 a.button {
   .buttonStyledLink(@font-color-base);
 }
